security fix after 4h on one bug